[gd_scene load_steps=2 format=3 uid="uid://nbtydi8ke77t"]

[ext_resource type="Script" uid="uid://tnbfg8jsar74" path="res://Scripts/UI/game_ui.gd" id="1_gek4i"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gek4i")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="StatusPanel" type="Panel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/StatusPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 5

[node name="TurnLabel" type="Label" parent="MarginContainer/VBoxContainer/StatusPanel/VBoxContainer"]
layout_mode = 2

[node name="PopulationLabel" type="Label" parent="MarginContainer/VBoxContainer/StatusPanel/VBoxContainer"]
layout_mode = 2

[node name="BudgetLabel" type="Label" parent="MarginContainer/VBoxContainer/StatusPanel/VBoxContainer"]
layout_mode = 2

[node name="HappinessLabel" type="Label" parent="MarginContainer/VBoxContainer/StatusPanel/VBoxContainer"]
layout_mode = 2

[node name="SafetyLabel" type="Label" parent="MarginContainer/VBoxContainer/StatusPanel/VBoxContainer"]
layout_mode = 2

[node name="EnvironmentLabel" type="Label" parent="MarginContainer/VBoxContainer/StatusPanel/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="EventLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DecisionsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DecisionsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Button1" type="Button" parent="MarginContainer/VBoxContainer/DecisionsContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.014499987, 0.87, 0, 1)

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/DecisionsContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.62788236, 0.8514512, 1)

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer/DecisionsContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.88, 0.528, 0, 1)

[node name="Button4" type="Button" parent="MarginContainer/VBoxContainer/DecisionsContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.6174542, 0.6174552, 0.61745435, 1)

[node name="ResetButton" type="Button" parent="MarginContainer/VBoxContainer/DecisionsContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "ðŸ”„ PradÄ—ti iÅ¡ naujo"
